--- a/BERT_Embeddings_with_TensorFlow_2_0.ipynb
+++ b/BERT_Embeddings_with_TensorFlow_2_0.ipynb
@@ -188,6 +188,7 @@
       },
       "source": [
         "max_seq_length = 128  # Your choice here.\n",
+        "tf.enable_eager_execution()",
         "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
         "                                       name=\"input_word_ids\")\n",
         "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
